// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example tests > AVERAGE(1, 3, 2, 5, 4) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`Example tests > COUNT(1, 2, TRUE(), "hello world", 3.2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`Example tests > MAX(1, 3, 2, 5, 4) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 5 │
└───┴───┘
"
`;

exports[`Example tests > MEDIAN(1, 3, 2, 5, 4) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`Example tests > MIN(5, 4, 1, 2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > MODE(3, 2, 1, 3, 3, 4, 5, 8, 9, 1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;
